--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@ body{text-align: center;margin: 0;font-size: 16px;}
 .readme{max-width: 270px;margin: auto;background: #f7f7f7;border-radius: 5px;padding: 10px;color: #888;}
 
 .update{    text-align: center;
-    font-size: 28px;margin: 10% auto 42px auto;}
+    font-size: 20px;margin: 10% auto 30px auto;}
 </style>
 
 <div class="update">
-<div>文天玩禁令系统升级维护中...</div>
+<div>文天玩WenTian Play</div>
+<div>禁令系统升级维护中...</div>
 </div>
 
 <div style="display: none;"></div>
