--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
-
 <!DOCTYPE html>
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0" />
-<title></title>
+<title>文天玩WenTian Play禁令系统</title>
 
 </head>
 <body>
@@ -17,12 +16,12 @@ body{text-align: center;margin: 0;font-size: 16px;}
 .readme{max-width: 270px;margin: auto;background: #f7f7f7;border-radius: 5px;padding: 10px;color: #888;}
 
 .update{    text-align: center;
-    font-size: 20px;margin: 10% auto 30px auto;}
+    font-size: 24px;margin: 10% auto 32px auto;}
 </style>
 
 <div class="update">
 <div>文天玩WenTian Play</div>
-<div>禁令系统升级维护中...</div>
+<div> 禁令系统升级维护中...</div>
 </div>
 
 <div style="display: none;"></div>
